# nodyx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Caddyfile.example  README.md  docker-compose.yml  ecosystem.config.example.js  index.html  install.sh  install_tunnel.sh  uninstall.sh
.github/: FUNDING.yml  MAINTAINER_CHECKLIST.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: BRANDING.md
docs/en/: ARCHITECTURE.md  AUDIO.md  CONTRIBUTING.md  DOMAIN.md  EMAIL.md  INSTALL.md  MANIFESTO.md  MODULE-SYSTEM.md  NEURAL-ENGINE.md  README.md  RELAY.md  ROADMAP.md  THANKS.md
docs/es/: DOMAIN.md  INSTALL.md  MANIFESTO.md  README.md
docs/fr/: ARCHITECTURE.md  AUDIO.md  CONTRIBUTING.md  DOMAIN.md  EMAIL.md  INSTALL.md  MANIFESTO.md  NEURAL-ENGINE.md  README.md  RELAY.md  ROADMAP.md  THANKS.md
docs/ideas/: NEXUS-ETHER-GUIDE.md  NEXUS-ETHER.md  NEXUS-RADIO.md  NODE-GENESIS.md  NODYX-ETHER-GUIDE.md  NODYX-ETHER.md  NODYX-RADIO.md
docs/specs/015-streamer-hub/: PHASE_2_REPORT.md  SPEC.MD
nexus-authenticator/: README.md
nexus-authenticator/src/: service-worker.ts
nexus-authenticator/src/routes/: +layout.svelte  +page.svelte
nexus-authenticator/static/: manifest.json
nexus-core/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
nexus-core/scripts/: regen-category-slugs.ts
nexus-core/src/: index.ts  scheduler.ts
nexus-core/src/migrations/: 016_community_branding.sql  017_name_color.sql  018_community_assets.sql  019_feature_seeds.sql  021_directory_assets.sql  022_whisper_rooms.sql  024_profile_metadata.sql  025_password_resets.sql  036_thread_slugs.sql  037_network_index.sql  042_network_index_content_type.sql  043_events_tickets_map.sql
nexus-core/src/models/: channel.ts  thread.ts
nexus-core/src/routes/: admin.ts  assets.ts  auth.ts  authenticator.ts  chat.ts  directory.ts  events.ts  forums.ts  garden.ts  instance.ts  polls.ts  tasks.ts  users.ts
nexus-core/src/scripts/: migrate.ts  (+2 more)
nexus-frontend/: .env.example  README.md  package-lock.json  package.json
nexus-frontend/src/: app.css  hooks.server.ts
nexus-p2p/crates/nexus-turn/: Cargo.toml
nexus-p2p/crates/nexus-turn/src/: auth.rs  main.rs  protocol.rs  server.rs
nodyx-authenticator/: README.md  package-lock.json  package.json  svelte.config.js
nodyx-authenticator/src/: app.css  app.html  service-worker.ts
nodyx-authenticator/static/: manifest.json
nodyx-core/: .dockerignore  .env.example  Dockerfile  Modelfile  README.md  ai-config.js  ai-settings.json  docker-compose.yml  neural-config.json  package-lock.json  package.json  test-ai.js  vitest.config.ts
nodyx-core/community/: IRIS.MD
nodyx-core/scripts/: Caddyfile.example  Install-Nexus.ps1  regen-category-slugs.ts  regen-slugs.ts
nodyx-core/src/: fortunes.ts  index.ts  scheduler.ts
nodyx-docs/src/: app.html
nodyx-frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
nodyx-frontend/src/: app.css  app.html  hooks.server.ts
nodyx-frontend/static/: llms.txt  manifest.json  robots.txt
nodyx-hub/src/: app.html
nodyx-p2p/: Cargo.toml
nodyx-p2p/crates/nexus-relay/: Cargo.toml
nodyx-p2p/crates/nexus-relay/src/: main.rs  protocol.rs
nodyx-p2p/crates/nexus-relay/src/client/: forwarder.rs  mod.rs
nodyx-p2p/crates/nexus-relay/src/server/: db.rs  http_proxy.rs  mod.rs  registry.rs  tcp_listener.rs
nodyx-p2p/crates/nodyx-server/: Cargo.toml
nodyx-p2p/crates/nodyx-server/src/: extractors.rs
nodyx-p2p/crates/nodyx-server/src/routes/: admin.rs  auth.rs  communities.rs  directory.rs  forums.rs  mod.rs  polls.rs  search.rs  tasks.rs  users.rs
plugins/: README.md
plugins/table-templates/: README.md
(+451 files in other folders)
