[package]
name = "nexus-relay"
version = "0.1.0"
edition = "2021"
description = "Nexus P2P relay — tunnel HTTP traffic through a persistent TCP connection without open ports or a domain"

[[bin]]
name = "nexus-relay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
base64      = "0.22"

# HTTP proxy (server side)
hyper           = { version = "1", features = ["full"] }
hyper-util      = { version = "0.1", features = ["full"] }
http-body-util  = "0.1"
bytes           = "1"

# HTTP client (client side — forward to localhost)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# PostgreSQL (server — token validation)
tokio-postgres = "0.7"

# Concurrent registry
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid    = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
